--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "./node_modules/.bin/eslint './**/*.{js,ts,tsx}' --quiet"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/node": "^14.14.6",
-    "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.21.0",
+    "flatlist-react": "^1.4.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -21,6 +24,7 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "@types/react": "^16.9.55",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
