--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
       "ignorePackages",
       { "js": "never", "jsx": "never", "ts": "never", "tsx": "never" }
     ],
+    "react/no-array-index-key": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "import/prefer-default-export": "off",
