--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "noEmit": true,
     "jsx": "react"
   },
-  "include": ["src"],
+  "include": ["src", "**/*.ts", "**/*.tsx"],
   "files": ["src/styles/styled.d.ts"]
 }
