--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "test": "react-scripts test --no-cache --silent",
+    "testDev": "react-scripts test --no-cache",
     "lint": "./node_modules/.bin/eslint './**/*.{js,ts,tsx}' --quiet"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -22,8 +26,11 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.22",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
+    "@types/testing-library__jest-dom": "^5.9.5",
+    "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
@@ -35,7 +42,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "ts-jest": "^26.5.4"
   },
   "eslintConfig": {
     "extends": [
