--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "lint": "./node_modules/.bin/eslint './**/*.{js,ts,tsx}' --quiet"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -28,6 +26,8 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.22",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest-styled-components": "^7.0.3",
     "prettier": "^2.1.2",
     "ts-jest": "^26.5.4"
   },
