--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,10 +29,8 @@
     "@typescript-eslint/no-use-before-define": ["error"],
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "error",
-    "react/jsx-filename-extension": [
-      "off",
-      { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
-    ]
+    "react/jsx-props-no-spreading": "off",
+    "react/jsx-filename-extension": ["off", { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
   },
   "overrides": [
     {
