--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-elastic-carousel": "^0.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-switch": "^6.0.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3"
   },
