--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "polished": "^4.2.2",
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
     "react-dom": "^17.0.1",
