--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "error",
     "react/jsx-props-no-spreading": "off",
+    "react/jsx-one-expression-per-line": "off",
     "react/jsx-filename-extension": ["off", { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
   },
   "overrides": [
